--- a/index.html
+++ b/index.html
@@ -8,8 +8,152 @@
 </head>
 <body>
     <div class="root">
+        <!-- Header -->
         <div class="header_container">
-qwsqw
+            <div class="logo_container">
+                <img src="assets/logo.svg" alt="Логотип сайта" class="logo"/>
+                <div class="logo_header_container">
+                    <h2 class="logo_header">КУБОК "ЮНИСОН" СРЕДИ ДЕТСКИХ ХОККЕЙНЫХ КОМАНД 2014 Г.</h2>
+                    <div class="logo_header2_container">
+                        <div class="logo_header2"><span>18-19 МАЯ</span>/<span>СК «ХОККЕЙНЫЙ ГОРОД КРАСНОГОРСК»</span></div>
+                    </div>
+                </div>
+            </div>
+            <div class="nav_container">
+                <span>о турнире</span>
+                <span>участники</span>
+                <span>арена</span>
+                <span>продвижение</span>
+                <span>расписание</span>
+                <span>турнирная таблица</span>
+                <span>гости турнира</span>
+            </div>
+        </div>
+        <!-- Main -->
+        <div class="main_container">
+            <img src="/assets/main_bacground.png" alt="Изображение играющих хоккеистов" class="main_bacground_image">
+            <div class="main_text_container">
+                <div class="crumbs"><span>18-19 МАЯ </span> / <span> СК «ХОККЕЙНЫЙ ГОРОД КРАСНОГОРСК»</span></div>
+                <h1 class="main_header">КУБОК "ЮНИСОН" СРЕДИ ДЕТСКИХ ХОККЕЙНЫХ КОМАНД 2014 Г.</h1>
+                <div class="main_logo_container">
+                    <img src="assets/logo1.svg" alt="Логотип">
+                    <img src="assets/logo2.svg" alt="Логотип">
+                    <img src="assets/logo3.svg" alt="Логотип" style="width: 4vw;">
+                    <img src="assets/logo4.svg" alt="Логотип">
+                </div>
+                <div class="main_logo_container">
+                    <img src="assets/logo5.svg" alt="Логотип">
+                    <img src="assets/logo6.svg" alt="Логотип" style="width: 4vw;">
+                    <img src="assets/logo7.svg" alt="Логотип" style="width: 4vw;">
+                    <img src="assets/logo8.svg" alt="Логотип" style="width: 4vw;">
+                </div>
+            </div>
+        </div>
+        <!-- About -->
+        <div class="about_container">
+            <img src="/assets/about_bacground.png" alt="Изображение хоккеиста" class="about_bacground_image">
+            <div class="about_text_container">
+                <h2 class="about_text_header">[о турнире]</h2>
+                <span class="about_text_text">18 и 19 мая в «Хоккейном городе Красногорск» по адресу: Красногорск, ул. Ахматовой, 26, 
+                    микрорайон Опалиха, пройдет традиционный международный турнир, ставший лауреатом премии ФХР 
+                    «Герои хоккея»</span>
+                <span class="about_text_text">За главный трофей «Кубок Юнисон» поборются восемь сильнейших детских команд 2014 года рождения из 
+                    России и ближнего зарубежья, в том числе и команды академии СКА, которая продолжает развиваться 
+                    при поддержке ПАО «Газпром».</span>
+            </div>
+        </div>
+        <!-- Pleers -->
+        <div class="pleers_container">
+            <img src="assets/pleers_bacground.png" alt="Карта участников" class="pleers_bacground_image">
+            <div class="pleers_header_container">
+                <h2 class="pleers_header">[участники]</h2>
+                <span class="pleers_description">БОЛЕЕ 200 УЧАСТНИКОВ ИЗ РАЗНЫХ РЕГИОНОВ РОССИИ и БЛИЖНЕГО ЗАРУБЕЖЬЯ</span>
+            </div>
+            <div class="pleers_city_container">
+                <div class="pleers_city">/<span>Казань</span></div>
+                <div class="pleers_city">/<span>Санкт-петербург</span></div>
+                <div class="pleers_city">/<span>Москва</span></div>
+                <div class="pleers_city">/<span>Тольятти</span></div>
+                <div class="pleers_city">/<span>Магнитогорск</span></div>
+                <div class="pleers_city">/<span>Минск</span></div>
+            </div>
+        </div>
+        <!-- PleersCards -->
+        <div class="pleers_cards_container">
+            <div class="pleers_card">
+                <img src="assets/pleers_card_red.svg" alt="" class="pleers_card_red">
+                <img src="assets/logo1.svg" alt="Логотип команды" class="pleers_card_logo">
+                <div class="pleers_card_text_container">
+                    <h2 class="pleers_card_header">СКА-стрельна</h2>
+                    <span class="pleers_card_city">Санкт-петербург</span>
+                </div>
+            </div>
+            <div class="pleers_card">
+                <img src="assets/pleers_card_red.svg" alt="" class="pleers_card_red">
+                <img src="assets/logo2.svg" alt="Логотип команды" class="pleers_card_logo" >
+                <div class="pleers_card_text_container">
+                    <h2 class="pleers_card_header">АК Барс</h2>
+                    <span class="pleers_card_city">казань</span>
+                </div>
+            </div>
+            <div class="pleers_card">
+                <img src="assets/pleers_card_red.svg" alt="" class="pleers_card_red">
+                <img src="assets/logo3.svg" alt="Логотип команды" class="pleers_card_logo" style="width: 4vw;">
+                <div class="pleers_card_text_container">
+                    <h2 class="pleers_card_header">Лада</h2>
+                    <span class="pleers_card_city">тольятти</span>
+                </div>
+            </div>
+            <div class="pleers_card">
+                <img src="assets/pleers_card_red.svg" alt="" class="pleers_card_red">
+                <img src="assets/logo4.svg" alt="Логотип команды" class="pleers_card_logo">
+                <div class="pleers_card_text_container">
+                    <h2 class="pleers_card_header">Армия ска</h2>
+                    <span class="pleers_card_city">Санкт-петербург</span>
+                </div>
+            </div>
+            <div class="pleers_card">
+                <img src="assets/pleers_card_red.svg" alt="" class="pleers_card_red">
+                <img src="assets/logo5.svg" alt="Логотип команды" class="pleers_card_logo">
+                <div class="pleers_card_text_container">
+                    <h2 class="pleers_card_header">Красная машина юниор</h2>
+                    <span class="pleers_card_city">Москва</span>
+                </div>
+            </div>
+            <div class="pleers_card">
+                <img src="assets/pleers_card_red.svg" alt="" class="pleers_card_red">
+                <img src="assets/logo6.svg" alt="Логотип команды" class="pleers_card_logo" style="width: 5vw;">
+                <div class="pleers_card_text_container">
+                    <h2 class="pleers_card_header">динамо</h2>
+                    <span class="pleers_card_city">Москва</span>
+                </div>
+            </div>
+            <div class="pleers_card">
+                <img src="assets/pleers_card_red.svg" alt="" class="pleers_card_red">
+                <img src="assets/logo7.svg" alt="Логотип команды" class="pleers_card_logo" style="width: 5vw;">
+                <div class="pleers_card_text_container">
+                    <h2 class="pleers_card_header">Школа им. руслана салея</h2>
+                    <span class="pleers_card_city">минск</span>
+                </div>
+            </div>
+            <div class="pleers_card">
+                <img src="assets/pleers_card_red.svg" alt="" class="pleers_card_red">
+                <img src="assets/logo8.svg" alt="Логотип команды" class="pleers_card_logo" style="width: 5vw;">
+                <div class="pleers_card_text_container">
+                    <h2 class="pleers_card_header">Металлург</h2>
+                    <span class="pleers_card_city">магнитогорск</span>
+                </div>
+            </div>
+        </div>
+        <!-- Arena -->
+        <div class="arena_container">
+            <h2 class="arena_header">[Арена]</h2>
+            <div class="arena_card_container">
+                <img src="assets/arena_photo.png" alt="Фото ледовой арены" class="arena_img">
+                <div class="arena_red_box">
+asd
+                </div>
+            </div>
         </div>
     </div>
 </body>
