--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="root">
         <!-- Header -->
         <div class="header_container">
             <div class="logo_container">
-                <img src="assets/logo.svg" alt="Логотип сайта" class="logo"/>
+                <img src="assets/logo.svg" alt="Логотип сайта" class="logo" />
                 <div class="logo_header_container">
                     <h2 class="logo_header">КУБОК "ЮНИСОН" СРЕДИ ДЕТСКИХ ХОККЕЙНЫХ КОМАНД 2014 Г.</h2>
                     <div class="logo_header2_container">
-                        <div class="logo_header2"><span>18-19 МАЯ</span>/<span>СК «ХОККЕЙНЫЙ ГОРОД КРАСНОГОРСК»</span></div>
+                        <div class="logo_header2"><span>18-19 МАЯ</span>/<span>СК «ХОККЕЙНЫЙ ГОРОД КРАСНОГОРСК»</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -54,11 +57,13 @@
             <img src="/assets/about_bacground.png" alt="Изображение хоккеиста" class="about_bacground_image">
             <div class="about_text_container">
                 <h2 class="about_text_header">[о турнире]</h2>
-                <span class="about_text_text">18 и 19 мая в «Хоккейном городе Красногорск» по адресу: Красногорск, ул. Ахматовой, 26, 
-                    микрорайон Опалиха, пройдет традиционный международный турнир, ставший лауреатом премии ФХР 
+                <span class="about_text_text">18 и 19 мая в «Хоккейном городе Красногорск» по адресу: Красногорск, ул.
+                    Ахматовой, 26,
+                    микрорайон Опалиха, пройдет традиционный международный турнир, ставший лауреатом премии ФХР
                     «Герои хоккея»</span>
-                <span class="about_text_text">За главный трофей «Кубок Юнисон» поборются восемь сильнейших детских команд 2014 года рождения из 
-                    России и ближнего зарубежья, в том числе и команды академии СКА, которая продолжает развиваться 
+                <span class="about_text_text">За главный трофей «Кубок Юнисон» поборются восемь сильнейших детских
+                    команд 2014 года рождения из
+                    России и ближнего зарубежья, в том числе и команды академии СКА, которая продолжает развиваться
                     при поддержке ПАО «Газпром».</span>
             </div>
         </div>
@@ -67,7 +72,8 @@
             <img src="assets/pleers_bacground.png" alt="Карта участников" class="pleers_bacground_image">
             <div class="pleers_header_container">
                 <h2 class="pleers_header">[участники]</h2>
-                <span class="pleers_description">БОЛЕЕ 200 УЧАСТНИКОВ ИЗ РАЗНЫХ РЕГИОНОВ РОССИИ и БЛИЖНЕГО ЗАРУБЕЖЬЯ</span>
+                <span class="pleers_description">БОЛЕЕ 200 УЧАСТНИКОВ ИЗ РАЗНЫХ РЕГИОНОВ РОССИИ и БЛИЖНЕГО
+                    ЗАРУБЕЖЬЯ</span>
             </div>
             <div class="pleers_city_container">
                 <div class="pleers_city">/<span>Казань</span></div>
@@ -90,7 +96,7 @@
             </div>
             <div class="pleers_card">
                 <img src="assets/pleers_card_red.svg" alt="" class="pleers_card_red">
-                <img src="assets/logo2.svg" alt="Логотип команды" class="pleers_card_logo" >
+                <img src="assets/logo2.svg" alt="Логотип команды" class="pleers_card_logo">
                 <div class="pleers_card_text_container">
                     <h2 class="pleers_card_header">АК Барс</h2>
                     <span class="pleers_card_city">казань</span>
@@ -149,12 +155,159 @@
         <div class="arena_container">
             <h2 class="arena_header">[Арена]</h2>
             <div class="arena_card_container">
-                <img src="assets/arena_photo.png" alt="Фото ледовой арены" class="arena_img">
-                <div class="arena_red_box">
-asd
+                <div class="arena_photo_box">
+                    <div class="arena_blur_container"></div>
+                    <img src="assets/arena_photo.png" alt="Фото ледовой арены" class="arena_img" style="z-index: 0;">
+
                 </div>
+                <div class="arena_red_box">
+                    <img src="assets/arena_icon.svg" alt="Иконка шайбы" class="arena_icon">
+                    <h2 class="arena_red_box_name">СК «ХОККЕЙНЫЙ ГОРОД КРАСНОГОРСК»</h2>
+                    <span class="arena_red_box_adress">мкрн. Опалиха, ул. Ахматовой д.26</span>
+                </div>
+            </div>
+        </div>
+        <!-- Schedule -->
+        <div class="schedule_container">
+            <h2 class="schedule_header">[Расписание]</h2>
+            <img src="assets/schedule_bacground.png" alt="Фоновое изображение" class="schedule_bacground_image">
+            <img src="assets/schedule_partners.png" alt="Фоновое изображение" class="schedule_partners_image">
+            <div class="schedule_text_container">
+                <div class="schedule_button_container">
+                    <div class="schedule_button">18 мая</div>
+                    <div class="schedule_button">19 мая</div>
+                </div>
+                <div class="schedule_card">
+                    <div class="schedule_comands">
+                        <div class="schedule_time">09:00</div>
+                        <img src="assets/logo1.svg" alt="Логотип команды" class="schedule_logo">
+                        <span class="schedule_comand_name">СКА-стрельна</span>
+                        <span class="schedule_slesh">/</span>
+                        <span class="schedule_comand_name">АК Барс</span>
+                        <img src="assets/logo2.svg" alt="Логотип команды" class="schedule_logo">
+                    </div>
+                    <img src="assets/translation.png" alt="Иконка трансляции" class="schedule_translation">
+                </div>
+                <div class="schedule_card">
+                    <div class="schedule_comands">
+                        <div class="schedule_time">10:30</div>
+                        <img src="assets/logo7.svg" alt="Логотип команды" class="schedule_logo">
+                        <span class="schedule_comand_name">Лада</span>
+                        <span class="schedule_slesh">/</span>
+                        <span class="schedule_comand_name">Армия СКА</span>
+                        <img src="assets/logo5.svg" alt="Логотип команды" class="schedule_logo">
+                    </div>
+                    <img src="assets/translation.png" alt="Иконка трансляции" class="schedule_translation">
+                </div>
+                <div class="schedule_card">
+                    <div class="schedule_comands">
+                        <div class="schedule_time red">12:00</div>
+                        <span class="schedule_comand_name red head">Церемония открытия</span>
+                    </div>
+                </div>
+                <div class="schedule_card">
+                    <div class="schedule_comands">
+                        <div class="schedule_time">12:30</div>
+                        <img src="assets/logo3.svg" alt="Логотип команды" class="schedule_logo">
+                        <span class="schedule_comand_name">Красная машина юниор</span>
+                        <span class="schedule_slesh">/</span>
+                        <span class="schedule_comand_name">Металлург</span>
+                        <img src="assets/logo8.svg" alt="Логотип команды" class="schedule_logo">
+                    </div>
+                    <img src="assets/translation.png" alt="Иконка трансляции" class="schedule_translation">
+                </div>
+                <div class="schedule_card">
+                    <div class="schedule_comands">
+                        <div class="schedule_time">14:00</div>
+                        <img src="assets/logo6.svg" alt="Логотип команды" class="schedule_logo">
+                        <span class="schedule_comand_name">Школа им. руслана салея</span>
+                        <span class="schedule_slesh">/</span>
+                        <span class="schedule_comand_name">динамо</span>
+                        <img src="assets/logo4.svg" alt="Логотип команды" class="schedule_logo">
+                    </div>
+                    <img src="assets/translation.png" alt="Иконка трансляции" class="schedule_translation">
+                </div>
+                <div class="schedule_card">
+                    <div class="schedule_comands">
+                        <div class="schedule_time">15:30</div>
+                        <img src="assets/logo3.svg" alt="Логотип команды" class="schedule_logo">
+                        <span class="schedule_comand_name">Красная машина юниор</span>
+                        <span class="schedule_slesh">/</span>
+                        <span class="schedule_comand_name">армия ска</span>
+                        <img src="assets/logo5.svg" alt="Логотип команды" class="schedule_logo">
+                    </div>
+                    <img src="assets/translation.png" alt="Иконка трансляции" class="schedule_translation">
+                </div>
+                <div class="schedule_card">
+                    <div class="schedule_comands">
+                        <div class="schedule_time">17:00</div>
+                        <img src="assets/logo6.svg" alt="Логотип команды" class="schedule_logo">
+                        <span class="schedule_comand_name">Школа им. руслана салея</span>
+                        <span class="schedule_slesh">/</span>
+                        <span class="schedule_comand_name">АК Барс</span>
+                        <img src="assets/logo2.svg" alt="Логотип команды" class="schedule_logo">
+                    </div>
+                    <img src="assets/translation.png" alt="Иконка трансляции" class="schedule_translation">
+                </div>
+                <div class="schedule_card">
+                    <div class="schedule_comands">
+                        <div class="schedule_time">18:30</div>
+                        <img src="assets/logo1.svg" alt="Логотип команды" class="schedule_logo">
+                        <span class="schedule_comand_name">СКА-стрельна</span>
+                        <span class="schedule_slesh">/</span>
+                        <span class="schedule_comand_name">Динамо</span>
+                        <img src="assets/logo4.svg" alt="Логотип команды" class="schedule_logo">
+                    </div>
+                    <img src="assets/translation.png" alt="Иконка трансляции" class="schedule_translation">
+                </div>
+                <div class="schedule_card">
+                    <div class="schedule_comands">
+                        <div class="schedule_time">20:00</div>
+                        <img src="assets/logo7.svg" alt="Логотип команды" class="schedule_logo">
+                        <span class="schedule_comand_name">Лада</span>
+                        <span class="schedule_slesh">/</span>
+                        <span class="schedule_comand_name">Металлург</span>
+                        <img src="assets/logo8.svg" alt="Логотип команды" class="schedule_logo">
+                    </div>
+                    <img src="assets/translation.png" alt="Иконка трансляции" class="schedule_translation">
+                </div>
+            </div>
+        </div>
+        <!-- Footer -->
+        <div class="footer_container">
+            <div class="column">
+                <div class="footer_logo_container">
+                    <img src="assets/logo.svg" alt="Логотип сайта" class="ffooter_logo" />
+                    <div class="logo_footer_container">
+                        <h2 class="logo_footer">КУБОК "ЮНИСОН" СРЕДИ ДЕТСКИХ ХОККЕЙНЫХ КОМАНД 2014 Г.</h2>
+                        <div class="logo_footer2_container">
+                            <div class="logo_footer2"><span>18-19 МАЯ</span>/<span>СК «ХОККЕЙНЫЙ ГОРОД
+                                    КРАСНОГОРСК»</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_icon_container">
+                    <a href=""><img src="assets/vk.svg" alt="vk"></a>
+                    <a href=""><img src="assets/viber.svg" alt="viber"></a>
+                </div>
+                <div class="footer_link_container">
+                    <a href="">2023 © Официальный сайт «Красная Машина Юниор»</a>
+                    <a href="">Политика конфиденциальности</a>
+                </div>
+            </div>
+
+            <div class="footer_nav_container">
+                <a href="#"><span>о турнире</span></a>
+                <a href="#"><span>участники</span></a>
+                <a href="#"><span>арена</span></a>
+                <a href="#"><span>продвижение</span></a>
+                <a href="#"><span>расписание</span></a>
+                <a href="#"><span>турнирная таблица</span></a>
+                <a href="#"><span>гости турнира</span></a>
             </div>
         </div>
     </div>
 </body>
+
 </html>
